add admin add action

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -221,6 +221,15 @@ $(function(){
 						</ul>
 					</div>
 					<div class="accordionHeader">
+						<h2><span>Folder</span>部门管理</h2>
+					</div>
+					<div class="accordionContent">
+						<ul class="tree">
+							<li><a href="/department/colleges" target="navTab" rel="department_page">学院管理</a></li>
+							<li><a href="/department/classes" target="navTab" rel="department_page">班级管理</a></li>
+						</ul>
+					</div>
+					<div class="accordionHeader">
 						<h2><span>Folder</span>成员管理</h2>
 					</div>
 					<div class="accordionContent">
