remove admin from list

--- a/src/views/user/admin.hbs
+++ b/src/views/user/admin.hbs
@@ -34,9 +34,8 @@
 	<div class="panelBar">
 		<ul class="toolBar">
 			<li><a class="add" href="/user/admins/create" target="dialog" rel="admin" mask="true" title="添加"><span>添加</span></a></li>
-			<!-- <li><a class="add" href="demo_page4.html" target="navTab"><span>添加</span></a></li> -->
-			<li><a class="delete" href="demo/common/ajaxDone.html?uid={sid_user}" target="ajaxTodo" title="确定要删除吗?"><span>删除</span></a></li>
-			<li><a class="edit" href="demo_page4.html?uid={sid_user}" target="navTab"><span>修改</span></a></li>
+			<li><a class="delete" href="/user/admins/delete?uid={sid_user}" target="ajaxTodo" title="确定要删除吗?"><span>删除</span></a></li>
+			<li><a class="edit" href="/user/admins/edit?uid={sid_user}" target="dialog" rel="admin" mask="true" title="修改"><span>修改</span></a></li>
 		</ul>
 	</div>
 	<table class="table" width="100%" layoutH="138">
