finish remove user

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -78,7 +78,7 @@ $(function(){
 		pageInfo:{pageNum:"pageNum", numPerPage:"numPerPage", orderField:"orderField", orderDirection:"orderDirection"}, //【可选】
 		keys: {statusCode:"statusCode", message:"message"}, //【可选】
 		ui:{hideMode:'offsets'}, //【可选】hideMode:navTab组件切换的隐藏方式，支持的值有’display’，’offsets’负数偏移位置的值，默认值为’display’
-		debug:false,	// 调试模式 【true|false】
+		debug:true,	// 调试模式 【true|false】
 		callback:function(){
 			initEnv();
 			$("#themeList").theme({themeBase:"themes"}); // themeBase 相对于index页面的主题base路径
@@ -234,9 +234,9 @@ $(function(){
 					</div>
 					<div class="accordionContent">
 						<ul class="tree">
-							<li><a href="/user/admins" target="navTab" rel="user_page">管理员管理</a></li>
-							<li><a href="/user/teachers" target="navTab" rel="user_page">教师管理</a></li>
-							<li><a href="/user/students" target="navTab" rel="user_page">学生管理</a></li>
+							<li><a href="/user/admins" target="navTab" rel="user_page_admin">管理员管理</a></li>
+							<li><a href="/user/teachers" target="navTab" rel="user_page_teacher">教师管理</a></li>
+							<li><a href="/user/students" target="navTab" rel="user_page_student">学生管理</a></li>
 						</ul>
 					</div>
 				</div>
