--- a/src/views/user/admin_dialog.hbs
+++ b/src/views/user/admin_dialog.hbs
@@ -1,6 +1,6 @@
 
 <div class="pageContent">
-	<form method="post" action="/user/admins/create" class="pageForm required-validate" onsubmit="return validateCallback(this, navTabAjaxDone);">
+	<form method="post" action="/user/admins/create" class="pageForm required-validate" onsubmit="return validateCallback(this, dialogAjaxDone);">
 		<div class="pageFormContent" layoutH="56">
 			<p>
 				<label>管理员编号: </label>
