--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -7,7 +7,7 @@
 <link href="themes/default/style.css" rel="stylesheet" type="text/css" media="screen"/>
 <link href="themes/css/core.css" rel="stylesheet" type="text/css" media="screen"/>
 <link href="themes/css/print.css" rel="stylesheet" type="text/css" media="print"/>
-<link href="components/uploadify/css/uploadify.css" rel="stylesheet" type="text/css" media="screen"/>
+<link href="uploadify/css/uploadify.css" rel="stylesheet" type="text/css" media="screen"/>
 <!--[if IE]>
 <link href="themes/css/ieHack.css" rel="stylesheet" type="text/css" media="screen"/>
 <![endif]-->
@@ -20,17 +20,17 @@
 <script src="js/jquery.cookie.js" type="text/javascript"></script>
 <script src="js/jquery.validate.js" type="text/javascript"></script>
 <script src="js/jquery.bgiframe.js" type="text/javascript"></script>
-<script src="components/xheditor/xheditor-1.2.1.min.js" type="text/javascript"></script>
-<script src="components/xheditor/xheditor_lang/zh-cn.js" type="text/javascript"></script>
-<script src="components/uploadify/scripts/jquery.uploadify.js" type="text/javascript"></script>
+<script src="xheditor/xheditor-1.2.1.min.js" type="text/javascript"></script>
+<script src="xheditor/xheditor_lang/zh-cn.js" type="text/javascript"></script>
+<script src="uploadify/scripts/jquery.uploadify.js" type="text/javascript"></script>
 
 <!-- svg图表  supports Firefox 3.0+, Safari 3.0+, Chrome 5.0+, Opera 9.5+ and Internet Explorer 6.0+ -->
-<script type="text/javascript" src="components/chart/raphael.js"></script>
-<script type="text/javascript" src="components/chart/g.raphael.js"></script>
-<script type="text/javascript" src="components/chart/g.bar.js"></script>
-<script type="text/javascript" src="components/chart/g.line.js"></script>
-<script type="text/javascript" src="components/chart/g.pie.js"></script>
-<script type="text/javascript" src="components/chart/g.dot.js"></script>
+<script type="text/javascript" src="chart/raphael.js"></script>
+<script type="text/javascript" src="chart/g.raphael.js"></script>
+<script type="text/javascript" src="chart/g.bar.js"></script>
+<script type="text/javascript" src="chart/g.line.js"></script>
+<script type="text/javascript" src="chart/g.pie.js"></script>
+<script type="text/javascript" src="chart/g.dot.js"></script>
 
 <script src="js/dwz.core.js" type="text/javascript"></script>
 <script src="js/dwz.util.date.js" type="text/javascript"></script>
@@ -71,7 +71,7 @@
 
 <script type="text/javascript">
 $(function(){
-	DWZ.init("components/dwz.frag.xml", {
+	DWZ.init("dwz.frag.xml", {
 		loginUrl:"login_dialog.html", loginTitle:"登录",	// 弹出登录对话框
 //		loginUrl:"login.html",	// 跳到登录页面
 		statusCode:{ok:200, error:300, timeout:301}, //【可选】
