add department management

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -225,8 +225,8 @@ $(function(){
 					</div>
 					<div class="accordionContent">
 						<ul class="tree">
-							<li><a href="/department/colleges" target="navTab" rel="department_page">学院管理</a></li>
-							<li><a href="/department/classes" target="navTab" rel="department_page">班级管理</a></li>
+							<li><a href="/department/colleges" target="navTab" rel="department_page_college">学院管理</a></li>
+							<li><a href="/department/classes" target="navTab" rel="department_page_class">班级管理</a></li>
 						</ul>
 					</div>
 					<div class="accordionHeader">
