--- a/src/views/department/class.hbs
+++ b/src/views/department/class.hbs
@@ -31,9 +31,9 @@
 <div class="pageContent">
 	<div class="panelBar">
 		<ul class="toolBar">
-			<li><a class="add" href="demo_page4.html" target="navTab"><span>添加</span></a></li>
-			<li><a class="delete" href="demo/common/ajaxDone.html?uid={sid_user}" target="ajaxTodo" title="确定要删除吗?"><span>删除</span></a></li>
-			<li><a class="edit" href="demo_page4.html?uid={sid_user}" target="navTab"><span>修改</span></a></li>
+			<li><a class="add" href="/department/classes/create" target="dialog"><span>添加</span></a></li>
+			<li><a class="delete" href="/department/classes/delete?uid={sid_uid}" target="ajaxTodo" title="确定要删除吗?"><span>删除</span></a></li>
+			<li><a class="edit" href="/department/classes/edit?uid={sid_uid}" target="dialog"><span>修改</span></a></li>
 		</ul>
 	</div>
 	<table class="table" width="100%" layoutH="138">
@@ -48,8 +48,10 @@
 		</thead>
 		<tbody>
 			{{#each classes}}
-				<tr target="sid_class" rel={{id}}>
+				<tr target="sid_uid" rel={{id}}>
 					<td>{{name}}</td>
+					<td>{{director}}</td>
+					<td>{{college}}</td>
 					<td>{{createdAt}}</td>
 					<td>{{updatedAt}}</td>
 				</tr>
