--- a/src/views/department/college.hbs
+++ b/src/views/department/college.hbs
@@ -1,9 +1,5 @@
-<form id="pagerForm" method="post" action="demo_page1.html">
-	<input type="hidden" name="status" value="${param.status}">
-	<input type="hidden" name="keywords" value="${param.keywords}" />
+<form id="pagerForm" method="post" action="">
 	<input type="hidden" name="pageNum" value="1" />
-	<input type="hidden" name="numPerPage" value="${model.numPerPage}" />
-	<input type="hidden" name="orderField" value="${param.orderField}" />
 </form>
 
 
@@ -28,9 +24,9 @@
 <div class="pageContent">
 	<div class="panelBar">
 		<ul class="toolBar">
-			<li><a class="add" href="demo_page4.html" target="navTab"><span>添加</span></a></li>
-			<li><a class="delete" href="demo/common/ajaxDone.html?uid={sid_user}" target="ajaxTodo" title="确定要删除吗?"><span>删除</span></a></li>
-			<li><a class="edit" href="demo_page4.html?uid={sid_user}" target="navTab"><span>修改</span></a></li>
+			<li><a class="add" href="/department/colleges/create" target="dialog"><span>添加</span></a></li>
+			<li><a class="delete" href="/department/colleges/delete?uid={sid_uid}" target="ajaxTodo" title="确定要删除吗?"><span>删除</span></a></li>
+			<li><a class="edit" href="/department/colleges/edit?uid={sid_uid}" target="dialog"><span>修改</span></a></li>
 		</ul>
 	</div>
 	<table class="table" width="100%" layoutH="138">
@@ -43,7 +39,7 @@
 		</thead>
 		<tbody>
 			{{#each colleges}}
-				<tr target="sid_college" rel={{id}}>
+				<tr target="sid_uid" rel={{id}}>
 					<td>{{name}}</td>
 					<td>{{createdAt}}</td>
 					<td>{{updatedAt}}</td>
