add category management

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -221,6 +221,15 @@ $(function(){
 						</ul>
 					</div>
 					<div class="accordionHeader">
+						<h2><span>Folder</span>学分类别管理</h2>
+					</div>
+					<div class="accordionContent">
+						<ul class="tree">
+							<li><a href="/category/categories" target="navTab" rel="category_page_category">大类管理</a></li>
+							<li><a href="/category/types" target="navTab" rel="category_page_type">小类管理</a></li>
+						</ul>
+					</div>
+					<div class="accordionHeader">
 						<h2><span>Folder</span>部门管理</h2>
 					</div>
 					<div class="accordionContent">
