--- a/src/views/category/type.hbs
+++ b/src/views/category/type.hbs
@@ -38,6 +38,7 @@
 			<tr>
         <th width="120">分值小类名称</th>
 				<th width="120">分值小类代码</th>
+				<th width="120">分值</th>
 				<th width="80">创建时间</th>
 				<th width="80">更新时间</th>
 			</tr>
@@ -47,6 +48,7 @@
 				<tr target="sid_uid" rel={{id}}>
 					<td>{{name}}</td>
 					<td>{{code}}</td>
+					<td>{{score}}</td>
 					<td>{{createdAt}}</td>
 					<td>{{updatedAt}}</td>
 				</tr>
