--- a/src/views/category/type_dialog.hbs
+++ b/src/views/category/type_dialog.hbs
@@ -11,6 +11,10 @@
 				<input name="temp" type="text" size="30" alt=""/>
 			</p>
 			<p>
+				<label>分值: </label>
+				<input name="score" type="text" size="30" alt=""/>
+			</p>
+			<p>
 				<label>代码: </label>
 				<input name="code" type="text" size="30" alt=""/>
 			</p>
