--- a/src/views/user/student.hbs
+++ b/src/views/user/student.hbs
@@ -42,7 +42,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			{{#each teachers}}
+			{{#each students}}
 				<tr target="sid_user" rel={{id}}>
 					<td>{{code}}</td>
 					<td>{{name}}</td>
