--- a/src/views/user/student_dialog.hbs
+++ b/src/views/user/student_dialog.hbs
@@ -4,11 +4,11 @@
 		<div class="pageFormContent" layoutH="56">
 			<p>
 				<label>学生学号: </label>
-				<input name="name" type="text" size="30" alt="编号需唯一"/>
+				<input name="code" type="text" size="30" alt="编号需唯一"/>
 			</p>
 			<p>
 				<label>学生姓名: </label>
-				<input name="code" type="text" size="30" alt="输入管理员真实姓名"/>
+				<input name="name" type="text" size="30" alt="输入管理员真实姓名"/>
 			</p>
 		</div>
 		<div class="formBar">
