--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -93,7 +93,8 @@ $(function(){
 	<div id="layout">
 		<div id="header">
 			<div class="headerNav">
-				<a class="logo" href="http://j-ui.com">标志</a>
+				<h2 style="color:white; font-size: 30px">秀水专修德育信息管理系统</h2>
+				<!-- <a class="logo" href="http://j-ui.com">标志</a> -->
 				<ul class="nav">
 					<li><a href="login.html">退出</a></li>
 				</ul>
@@ -122,12 +123,12 @@ $(function(){
 
 				<div class="accordion" fillSpace="sidebar">
 					<div class="accordionHeader">
-						<h2><span>Folder</span>界面组件</h2>
+						<h2><span>Folder</span>学分管理</h2>
 					</div>
 					<div class="accordionContent">
 						<ul class="tree treeFolder">
-							<li><a href="tabsPage.html" target="navTab">主框架面板</a>
-								<ul>
+							<li><a href="/score/scores" target="navTab" rel="score">学分记录</a>
+								<!-- <ul>
 									<li><a href="main.html" target="navTab" rel="main">我的主页</a></li>
 									<li><a href="http://www.baidu.com" target="navTab" rel="page1">页面一(外部页面)</a></li>
 									<li><a href="demo_page2.html" target="navTab" rel="external" external="true">iframe navTab页面</a></li>
@@ -142,44 +143,7 @@ $(function(){
 								</ul>
 							</li>
 
-							<li><a>常用组件</a>
-								<ul>
-									<li><a href="w_panel.html" target="navTab" rel="w_panel">面板</a></li>
-									<li><a href="w_tabs.html" target="navTab" rel="w_tabs">选项卡面板</a></li>
-									<li><a href="w_dialog.html" target="navTab" rel="w_dialog">弹出窗口</a></li>
-									<li><a href="w_alert.html" target="navTab" rel="w_alert">提示窗口</a></li>
-									<li><a href="w_list.html" target="navTab" rel="w_list">CSS表格容器</a></li>
-									<li><a href="demo_page1.html" target="navTab" rel="w_table">表格容器</a></li>
-									<li><a href="w_removeSelected.html" target="navTab" rel="w_table">表格数据库排序+批量删除</a></li>
-									<li><a href="w_tree.html" target="navTab" rel="w_tree">树形菜单</a></li>
-									<li><a href="w_accordion.html" target="navTab" rel="w_accordion">滑动菜单</a></li>
-									<li><a href="w_editor.html" target="navTab" rel="w_editor">编辑器</a></li>
-									<li><a href="w_datepicker.html" target="navTab" rel="w_datepicker">日期控件</a></li>
-									<li><a href="demo/database/db_widget.html" target="navTab" rel="db">suggest+lookup+主从结构</a></li>
-									<li><a href="demo/database/treeBringBack.html" target="navTab" rel="db">tree查找带回</a></li>
-									<li><a href="demo/sortDrag/1.html" target="navTab" rel="sortDrag">单个sortDrag示例</a></li>
-									<li><a href="demo/sortDrag/2.html" target="navTab" rel="sortDrag">多个sortDrag示例</a></li>
-									<li><a href="demo/sortDrag/form.html" target="navTab" rel="sortDrag">可拖动表单示例</a></li>
-								</ul>
-							</li>
 
-							<li><a>表单组件</a>
-								<ul>
-									<li><a href="w_validation.html" target="navTab" rel="w_validation">表单验证</a></li>
-									<li><a href="w_button.html" target="navTab" rel="w_button">按钮</a></li>
-									<li><a href="w_textInput.html" target="navTab" rel="w_textInput">文本框/文本域</a></li>
-									<li><a href="w_combox.html" target="navTab" rel="w_combox">下拉菜单</a></li>
-									<li><a href="w_checkbox.html" target="navTab" rel="w_checkbox">多选框/单选框</a></li>
-									<li><a href="demo_upload.html" target="navTab" rel="demo_upload">iframeCallback表单提交</a></li>
-									<li><a href="w_uploadify.html" target="navTab" rel="w_uploadify">uploadify多文件上传</a></li>
-								</ul>
-							</li>
-							<li><a>组合应用</a>
-								<ul>
-									<li><a href="demo/pagination/layout1.html" target="navTab" rel="pagination1">局部刷新分页1</a></li>
-									<li><a href="demo/pagination/layout2.html" target="navTab" rel="pagination2">局部刷新分页2</a></li>
-								</ul>
-							</li>
 							<li><a>图表</a>
 								<ul>
 									<li><a href="chart/test/barchart.html" target="navTab" rel="chart">柱状图(垂直)</a></li>
@@ -189,42 +153,14 @@ $(function(){
 									<li><a href="chart/test/linechart3.html" target="navTab" rel="chart">曲线图(自定义X坐标)</a></li>
 									<li><a href="chart/test/piechart.html" target="navTab" rel="chart">饼图</a></li>
 								</ul>
-							</li>
-							<li><a href="dwz.frag.xml" target="navTab" external="true">dwz.frag.xml</a></li>
-						</ul>
-					</div>
-					<div class="accordionHeader">
-						<h2><span>Folder</span>典型页面</h2>
-					</div>
-					<div class="accordionContent">
-						<ul class="tree treeFolder treeCheck">
-							<li><a href="demo_page1.html" target="navTab" rel="demo_page1">查询我的客户</a></li>
-							<li><a href="demo_page1.html" target="navTab" rel="demo_page2">表单查询页面</a></li>
-							<li><a href="demo_page4.html" target="navTab" rel="demo_page4">表单录入页面</a></li>
-							<li><a href="demo_page5.html" target="navTab" rel="demo_page5">有文本输入的表单</a></li>
-							<li><a href="javascript:;">有提示的表单输入页面</a>
-								<ul>
-									<li><a href="javascript:;">页面一</a></li>
-									<li><a href="javascript:;">页面二</a></li>
-								</ul>
-							</li>
-							<li><a href="javascript:;">选项卡和图形的页面</a>
-								<ul>
-									<li><a href="javascript:;">页面一</a></li>
-									<li><a href="javascript:;">页面二</a></li>
-								</ul>
-							</li>
-							<li><a href="javascript:;">选项卡和图形切换的页面</a></li>
-							<li><a href="javascript:;">左右两个互动的页面</a></li>
-							<li><a href="javascript:;">列表输入的页面</a></li>
-							<li><a href="javascript:;">双层栏目列表的页面</a></li>
+							</li> -->
 						</ul>
 					</div>
 					<div class="accordionHeader">
 						<h2><span>Folder</span>学分类别管理</h2>
 					</div>
 					<div class="accordionContent">
-						<ul class="tree">
+						<ul class="tree treeFolder">
 							<li><a href="/category/categories" target="navTab" rel="category_page_category">大类管理</a></li>
 							<li><a href="/category/types" target="navTab" rel="category_page_type">小类管理</a></li>
 						</ul>
@@ -233,7 +169,7 @@ $(function(){
 						<h2><span>Folder</span>部门管理</h2>
 					</div>
 					<div class="accordionContent">
-						<ul class="tree">
+						<ul class="tree treeFolder">
 							<li><a href="/department/colleges" target="navTab" rel="department_page_college">学院管理</a></li>
 							<li><a href="/department/classes" target="navTab" rel="department_page_class">班级管理</a></li>
 						</ul>
@@ -242,7 +178,7 @@ $(function(){
 						<h2><span>Folder</span>成员管理</h2>
 					</div>
 					<div class="accordionContent">
-						<ul class="tree">
+						<ul class="tree treeFolder">
 							<li><a href="/user/admins" target="navTab" rel="user_page_admin">管理员管理</a></li>
 							<li><a href="/user/teachers" target="navTab" rel="user_page_teacher">教师管理</a></li>
 							<li><a href="/user/students" target="navTab" rel="user_page_student">学生管理</a></li>
@@ -268,7 +204,7 @@ $(function(){
 				</ul>
 				<div class="navTab-panel tabsPageContent layoutBox">
 					<div class="page unitBox">
-						<div class="accountInfo">
+						<!-- <div class="accountInfo">
 							<div class="alertInfo">
 								<p><a href="https://code.csdn.net/dwzteam/dwz_jui/tree/master/doc" target="_blank" style="line-height:19px"><span>DWZ框架使用手册</span></a></p>
 								<p><a href="http://pan.baidu.com/s/18Bb8Z" target="_blank" style="line-height:19px">DWZ框架开发视频教材</a></p>
@@ -283,7 +219,7 @@ $(function(){
 						<div style="width:230px;position: absolute;top:60px;right:0" layoutH="80">
 							<iframe width="100%" height="430" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?width=0&height=430&fansRow=2&ptype=1&skin=1&isTitle=0&noborder=1&isWeibo=1&isFans=0&uid=1739071261&verifier=c683dfe7"></iframe>
 						</div>
-					</div>
+					</div> -->
 
 				</div>
 			</div>
