--- a/src/views/user/admin.hbs
+++ b/src/views/user/admin.hbs
@@ -39,12 +39,13 @@
 	<table class="table" width="100%" layoutH="138">
 		<thead>
 			<tr>
-				<th width="120">管理员编号</th>
-				<th>管理员账号</th>
-				<th>管理员姓名</th>
-				<th width="100">管理员邮件</th>
-				<th width="80">创建时间</th>
-				<th width="80">更新时间</th>
+				<th width="5%">管理员编号</th>
+				<th width="15%">管理员账号</th>
+				<th with="20%">管理员姓名</th>
+				<th width="20%">管理员邮件</th>
+				<th width="20%">管理员电话</th>
+				<th width="10%">创建时间</th>
+				<th width="10%">更新时间</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -54,6 +55,7 @@
 					<td>{{username}}</td>
 					<td>{{realname}}</td>
 					<td>{{email}}</td>
+					<td>{{phone}}</td>
 					<td>{{createdAt}}</td>
 					<td>{{updatedAt}}</td>
 				</tr>
