--- a/src/views/user/admin_dialog.hbs
+++ b/src/views/user/admin_dialog.hbs
@@ -3,8 +3,8 @@
 	<form method="post" action="/user/admins/create" class="pageForm required-validate" onsubmit="return validateCallback(this, dialogAjaxDone);">
 		<div class="pageFormContent" layoutH="56">
 			<p>
-				<label>管理员编号: </label>
-				<input name="code" type="text" size="30" alt="编号需唯一"/>
+				<label>编号: </label>
+				<input name="code" class="required" type="text" size="30" alt="编号需唯一"/>
 			</p>
 			<p>
 				<label>管理员真实姓名: </label>
@@ -20,7 +20,11 @@
 			</p>
 			<p>
 				<label>管理员邮件: </label>
-				<input name="email" class="email" size="30" alt="请输入管理员邮件" />
+				<input name="email" type="text" class="email" size="30" alt="请输入管理员邮件" />
+			</p>
+			<p>
+				<label>管理员电话: </label>
+				<input name="phone" type="text" class="phone" size="30" alt="请输入管理员电话" />
 			</p>
 		</div>
 		<div class="formBar">
