associate with colleage/teacher between class

--- a/src/views/department/class.hbs
+++ b/src/views/department/class.hbs
@@ -50,7 +50,7 @@
 			{{#each classes}}
 				<tr target="sid_uid" rel={{id}}>
 					<td>{{name}}</td>
-					<td>{{director}}</td>
+					<td>{{teacher}}</td>
 					<td>{{college}}</td>
 					<td>{{createdAt}}</td>
 					<td>{{updatedAt}}</td>
