--- a/src/views/user/teacher_dialog.hbs
+++ b/src/views/user/teacher_dialog.hbs
@@ -1,6 +1,6 @@
 
 <div class="pageContent">
-	<form method="post" action="/user/admins/create" class="pageForm required-validate" onsubmit="return validateCallback(this, dialogAjaxDone);">
+	<form method="post" action="/user/teachers/create" class="pageForm required-validate" onsubmit="return validateCallback(this, dialogAjaxDone);">
 		<div class="pageFormContent" layoutH="56">
 			<p>
 				<label>教师编号: </label>
@@ -20,7 +20,7 @@
 			</p>
 			<p>
 				<label>教师邮件: </label>
-				<input name="email" class="email" size="30" alt="请输入管理员邮件" />
+				<input name="email" class="email" type="text" size="30" alt="请输入教师邮件" />
 			</p>
 		</div>
 		<div class="formBar">
