add some missing files

--- a/src/views/user/student_search_dialog.hbs
+++ b/src/views/user/student_search_dialog.hbs
@@ -7,24 +7,16 @@
 </form>
 
 <div class="pageHeader">
-	<!-- <form rel="pagerForm" method="post" action="demo/database/dwzOrgLookup.html" onsubmit="return dwzSearch(this, 'dialog');">
+	<form rel="pagerForm" method="post" action="demo/database/dwzOrgLookup.html" onsubmit="return dwzSearch(this, 'dialog');">
 	<div class="searchBar">
 		<ul class="searchContent">
 			<li>
-				<label>部门名称:</label>
+				<label>学生姓名:</label>
 				<input class="textInput" name="orgName" value="" type="text">
 			</li>
 			<li>
-				<label>部门编号:</label>
+				<label>学生学号:</label>
 				<input class="textInput" name="orgNum" value="" type="text">
-			</li>
-			<li>
-				<label>部门经理:</label>
-				<input class="textInput" name="fullName" value="" type="text">
-			</li>
-				<li>
-				<label>上级部门:</label>
-				<input class="textInput" name="parentOrg.orgName" value="" type="text">
 			</li>
 		</ul>
 		<div class="subBar">
@@ -33,7 +25,7 @@
 			</ul>
 		</div>
 	</div>
-	</form> -->
+	</form>
 </div>
 <div class="pageContent">
 
@@ -43,7 +35,7 @@
 				<th width="120">学生学号</th>
 				<th>学生姓名</th>
 				<th>班级</th>
-				<th>返回</th>
+				<th>选择</th>
 			</tr>
 		</thead>
 		<tbody>
