--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -96,7 +96,8 @@ $(function(){
 				<h2 style="color:white; font-size: 30px">秀水专修德育信息管理系统</h2>
 				<!-- <a class="logo" href="http://j-ui.com">标志</a> -->
 				<ul class="nav">
-					<li><a href="login.html">退出</a></li>
+					<li><a href="#">欢迎您，{{user}}</a></li>
+					<li><a href="/logout">退出</a></li>
 				</ul>
 				<!-- <ul class="themeList" id="themeList">
 					<li theme="default"><div class="selected">蓝色</div></li>
