add multi students lookup

--- a/src/views/score/score_dialog.hbs
+++ b/src/views/score/score_dialog.hbs
@@ -29,7 +29,7 @@
       </p>
       <p>
         <label>登记人: </label>
-				<input name="teacher" type="text" size="30" alt="" disabled readonly value="Cat"/>
+				<input name="teacher" type="text" size="30" alt="" readonly="readonly" value="{{username}}"/>
       </p>
 		</div>
 		<div class="formBar">
