--- a/src/views/user/student.hbs
+++ b/src/views/user/student.hbs
@@ -12,7 +12,7 @@
 		<table class="searchContent">
 			<tr>
 				<td>
-					我的客户：<input type="text" name="keyword" />
+					学生姓名: <input type="text" name="name" />
 				</td>
 			</tr>
 		</table>
