add search functionality for categories

--- a/src/views/category/category.hbs
+++ b/src/views/category/category.hbs
@@ -8,12 +8,12 @@
 
 
 <div class="pageHeader">
-	<form onsubmit="return navTabSearch(this);" action="demo_page1.html" method="post">
+	<form onsubmit="return navTabSearch(this);" action="" method="post">
 	<div class="searchBar">
 		<table class="searchContent">
 			<tr>
         <td>
-					大类名称: <input type="text" name="keyword" />
+					大类名称: <input type="text" name="name" />
 				</td>
 			</tr>
 		</table>
