--- a/src/views/user/admin.hbs
+++ b/src/views/user/admin.hbs
@@ -12,17 +12,13 @@
 		<table class="searchContent">
 			<tr>
 				<td>
-					我的客户：<input type="text" name="keyword" />
-				</td>
-				<td>
-					建档日期：<input type="text" class="date" readonly="true" />
+					管理员姓名: <input type="text" name="realname" />
 				</td>
 			</tr>
 		</table>
 		<div class="subBar">
 			<ul>
 				<li><div class="buttonActive"><div class="buttonContent"><button type="submit">检索</button></div></div></li>
-				<li><a class="button" href="demo_page6.html" target="dialog" mask="true" title="查询框"><span>高级检索</span></a></li>
 			</ul>
 		</div>
 	</div>
