fix department name

--- a/src/views/department/class.hbs
+++ b/src/views/department/class.hbs
@@ -41,7 +41,7 @@
 			<tr>
         <th width="120">班级名称</th>
         <th width="120">班主任</th>
-				<th width="120">所属院系</th>
+				<th width="120">所属部门</th>
 				<th width="80">创建时间</th>
 				<th width="80">更新时间</th>
 			</tr>
