--- a/src/views/department/college_dialog.hbs
+++ b/src/views/department/college_dialog.hbs
@@ -3,7 +3,7 @@
 	<form method="post" action="/department/colleges/create" class="pageForm required-validate" onsubmit="return validateCallback(this, dialogAjaxDone);">
 		<div class="pageFormContent" layoutH="56">
 			<p>
-				<label>学院名称: </label>
+				<label>部门名称: </label>
 				<input name="name" type="text" size="30" alt=""/>
 			</p>
 		</div>
