--- a/src/views/department/college.hbs
+++ b/src/views/department/college.hbs
@@ -32,7 +32,7 @@
 	<table class="table" width="100%" layoutH="138">
 		<thead>
 			<tr>
-				<th width="120">院系名称</th>
+				<th width="120">部门名称</th>
 				<th width="80">创建时间</th>
 				<th width="80">更新时间</th>
 			</tr>
