--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -171,7 +171,7 @@ $(function(){
 					</div>
 					<div class="accordionContent">
 						<ul class="tree treeFolder">
-							<li><a href="/department/colleges" target="navTab" rel="department_page_college">学院管理</a></li>
+							<li><a href="/department/colleges" target="navTab" rel="department_page_college">部门管理</a></li>
 							<li><a href="/department/classes" target="navTab" rel="department_page_class">班级管理</a></li>
 						</ul>
 					</div>
